Comment out files individually

--- a/index.html
+++ b/index.html
@@ -9,34 +9,34 @@
 <body>
 	<ul>
 		<li><a href="./pages/1-add-document-element/page.html">Add Document Elements</a></li>
-		<!-- <li><a href="./pages/2-select-group-of-elements/page.html">Select Group Of Elements</a></li>
-		<li><a href="./pages/3-work-with-data/page.html">Work With Data</a></li> -->
-		<!-- <li><a href="./pages/4-work-with-dynamic-data/page.html"></a></li>
-		<li><a href="./pages/5-add-inline-styling-to-elements/page.html"></a></li>
-		<li><a href="./pages/6-change-styles-based-on-data/page.html"></a></li>
-		<li><a href="./pages/7-add-classes/page.html"></a></li>
-		<li><a href="./pages/8-update-height-of-element-dynamically/page.html"></a></li>
-		<li><a href="./pages/9-change-presentation-of-bar-chart/page.html"></a></li>
-		<li><a href="./pages/10-learn-about-svg/page.html"></a></li>
-		<li><a href="./pages/11-display-shapes-with-svg/page.html"></a></li>
-		<li><a href="./pages/12-create-a-bar-for-each-data-point-in-set/page.html"></a></li>
-		<li><a href="./pages/13-dynamically-set-coordinates-for-each-bar/page.html"></a></li>
-		<li><a href="./pages/14-dynamically-set-height-for-each-bar/page.html"></a></li>
-		<li><a href="./pages/15-insert-svg-elements/page.html"></a></li>
-		<li><a href="./pages/16-change-color-of-svg-element/page.html"></a></li>
-		<li><a href="./pages/17-add-labels-to-d3-elements/page.html"></a></li>
-		<li><a href="./pages/18-style-d3-labels/page.html"></a></li>
-		<li><a href="./pages/19-add-hover-effect-to-d3-element/page.html"></a></li>
-		<li><a href="./pages/20-add-tooltip-to-d3-element/page.html"></a></li>
-		<li><a href="./pages/21-create-scatterplot-with-svg-circles/page.html"></a></li>
-		<li><a href="./pages/22-add-attributes-to-circle-elements/page.html"></a></li>
-		<li><a href="./pages/23-add-labels-to-scatterplot-circles/page.html"></a></li>
-		<li><a href="./pages/24-create-linear-scale-with-d3/page.html"></a></li>
-		<li><a href="./pages/25-set-domain-and-range-on-scale/page.html"></a></li>
-		<li><a href="./pages/26-use-max-and-min-functions/page.html"></a></li>
-		<li><a href="./pages/27-use-dynamic-scales/page.html"></a></li>
-		<li><a href="./pages/28-use-predefined-scale/page.html"></a></li>
-		<li><a href="./pages/29-add-axes-to-visualization/page.html"></a></li> -->
+		<li><a href="./pages/2-select-group-of-elements/page.html">Select Group Of Elements</a></li>
+		<!-- <li><a href="./pages/3-work-with-data/page.html">Work With Data</a></li> -->
+		<!-- <li><a href="./pages/4-work-with-dynamic-data/page.html"></a></li> -->
+		<!-- <li><a href="./pages/5-add-inline-styling-to-elements/page.html"></a></li> -->
+		<!-- <li><a href="./pages/6-change-styles-based-on-data/page.html"></a></li> -->
+		<!-- <li><a href="./pages/7-add-classes/page.html"></a></li> -->
+		<!-- <li><a href="./pages/8-update-height-of-element-dynamically/page.html"></a></li> -->
+		<!-- <li><a href="./pages/9-change-presentation-of-bar-chart/page.html"></a></li> -->
+		<!-- <li><a href="./pages/10-learn-about-svg/page.html"></a></li> -->
+		<!-- <li><a href="./pages/11-display-shapes-with-svg/page.html"></a></li> -->
+		<!-- <li><a href="./pages/12-create-a-bar-for-each-data-point-in-set/page.html"></a></li> -->
+		<!-- <li><a href="./pages/13-dynamically-set-coordinates-for-each-bar/page.html"></a></li> -->
+		<!-- <li><a href="./pages/14-dynamically-set-height-for-each-bar/page.html"></a></li> -->
+		<!-- <li><a href="./pages/15-insert-svg-elements/page.html"></a></li> -->
+		<!-- <li><a href="./pages/16-change-color-of-svg-element/page.html"></a></li> -->
+		<!-- <li><a href="./pages/17-add-labels-to-d3-elements/page.html"></a></li> -->
+		<!-- <li><a href="./pages/18-style-d3-labels/page.html"></a></li> -->
+		<!-- <li><a href="./pages/19-add-hover-effect-to-d3-element/page.html"></a></li> -->
+		<!-- <li><a href="./pages/20-add-tooltip-to-d3-element/page.html"></a></li> -->
+		<!-- <li><a href="./pages/21-create-scatterplot-with-svg-circles/page.html"></a></li> -->
+		<!-- <li><a href="./pages/22-add-attributes-to-circle-elements/page.html"></a></li> -->
+		<!-- <li><a href="./pages/23-add-labels-to-scatterplot-circles/page.html"></a></li> -->
+		<!-- <li><a href="./pages/24-create-linear-scale-with-d3/page.html"></a></li> -->
+		<!-- <li><a href="./pages/25-set-domain-and-range-on-scale/page.html"></a></li> -->
+		<!-- <li><a href="./pages/26-use-max-and-min-functions/page.html"></a></li> -->
+		<!-- <li><a href="./pages/27-use-dynamic-scales/page.html"></a></li> -->
+		<!-- <li><a href="./pages/28-use-predefined-scale/page.html"></a></li> -->
+		<!-- <li><a href="./pages/29-add-axes-to-visualization/page.html"></a></li> -->
 	</ul>
 </body>
 
