--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<ul>
 		<li><a href="./pages/1-add-document-element/page.html">Add Document Elements</a></li>
 		<li><a href="./pages/2-select-group-of-elements/page.html">Select Group Of Elements</a></li>
-		<!-- <li><a href="./pages/3-work-with-data/page.html">Work With Data</a></li> -->
+		<li><a href="./pages/3-work-with-data/page.html">Work With Data</a></li>
 		<!-- <li><a href="./pages/4-work-with-dynamic-data/page.html"></a></li> -->
 		<!-- <li><a href="./pages/5-add-inline-styling-to-elements/page.html"></a></li> -->
 		<!-- <li><a href="./pages/6-change-styles-based-on-data/page.html"></a></li> -->
