--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<li><a href="./pages/2-select-group-of-elements/page.html">Select Group Of Elements</a></li>
 		<li><a href="./pages/3-work-with-data/page.html">Work With Data</a></li>
 		<li><a href="./pages/4-work-with-dynamic-data/page.html">Work With Dynamic Data</a></li>
-		<!-- <li><a href="./pages/5-add-inline-styling-to-elements/page.html"></a></li> -->
+		<li><a href="./pages/5-add-inline-styling-to-elements/page.html">Add Inline Styling To Elements</a></li>
 		<!-- <li><a href="./pages/6-change-styles-based-on-data/page.html"></a></li> -->
 		<!-- <li><a href="./pages/7-add-classes/page.html"></a></li> -->
 		<!-- <li><a href="./pages/8-update-height-of-element-dynamically/page.html"></a></li> -->
